fix: make SVG icons inherit text color in dark mode

--- a/src/components/BaseLayout.module.scss
+++ b/src/components/BaseLayout.module.scss
@@ -14,7 +14,7 @@ footer {
     color: $white;
   }
 
-  a, i, li {
+  a, i, li, svg {
     color: $white;
     transition: color 400ms;
   }
